@@ -1,109 +1,0 @@
-#
-# strong_type C++14/17/20 strong typedef library
-#
-# Copyright (C) Björn Fahller
-#
-#  Use, modification and distribution is subject to the
-#  Boost Software License, Version 1.0. (See accompanying
-#  file LICENSE_1_0.txt or copy at
-#  http://www.boost.org/LICENSE_1_0.txt)
-#
-# Project home: https://github.com/rollbear/strong_type
-#
-
-linux_task:
-  container:
-    dockerfile: config/ci/Dockerfile
-  env:
-    matrix:
-      - COMPILER: clang++-10
-        CXXSTD: 14
-        STDLIB: "-stdlib=libc++"
-        LDFLAGS: "-fuse-ld=gold -lc++abi"
-      - COMPILER: clang++-10
-        CXXSTD: 17
-        STDLIB: "-stdlib=libc++"
-        LDFLAGS: "-fuse-ld=gold -lc++abi"
-      - COMPILER: clang++-10
-        CXXSTD: 20
-        STDLIB: "-stdlib=libc++"
-        LDFLAGS: "-fuse-ld=gold -lc++abi"
-      - COMPILER: clang++-10
-        CXXSTD: 14
-      - COMPILER: clang++-10
-        CXXSTD: 17
-      - COMPILER: clang++-10
-        CXXSTD: 20
-      - COMPILER: g++-10
-        CXXSTD: 14
-      - COMPILER: g++-10
-        CXXSTD: 17
-      - COMPILER: g++-10
-        CXXSTD: 20
-      - COMPILER: clang++-9
-        CXXSTD: 14
-      - COMPILER: clang++-9
-        CXXSTD: 17
-      - COMPILER: clang++-9
-        CXXSTD: 20
-      - COMPILER: g++-9
-        CXXSTD: 14
-      - COMPILER: g++-9
-        CXXSTD: 17
-      - COMPILER: g++-9
-        CXXSTD: 20
-      - COMPILER: clang++-8
-        CXXSTD: 14
-      - COMPILER: clang++-8
-        CXXSTD: 17
-      - COMPILER: g++-8
-        CXXSTD: 14
-      - COMPILER: g++-8
-        CXXSTD: 17
-      - COMPILER: g++-8
-        CXXSTD: 20
-      - COMPILER: clang++-7
-        CXXSTD: 14
-      - COMPILER: clang++-7
-        CXXSTD: 17
-      - COMPILER: g++-7
-        CXXSTD: 14
-      - COMPILER: g++-7
-        CXXSTD: 17
-      - COMPILER: clang++-6.0
-        CXXSTD: 14
-      - COMPILER: clang++-6.0
-        CXXSTD: 17
-    matrix:
-      - BUILD_TYPE: Debug
-  pre_install_script:
-    - mkdir -p build-${BUILD_TYPE}
-  build_script:
-    - cd build-${BUILD_TYPE}
-    - echo cmake -DCMAKE_CXX_COMPILER=${COMPILER} -DCMAKE_CXX_STANDARD=${CXXSTD} -DCMAKE_CXX_FLAGS="${STDLIB} -Wall -Wextra -pedantic -Werror" -DCMAKE_EXE_LINKER_FLAGS="${LDFLAGS}" -DCMAKE_BUILD_TYPE=${BUILD_TYPE} ..
-    - cmake -DCMAKE_CXX_COMPILER=${COMPILER} -DCMAKE_CXX_STANDARD=${CXXSTD} -DCMAKE_CXX_FLAGS="${STDLIB} -Wall -Wextra -pedantic -Werror" -DCMAKE_BUILD_TYPE=${BUILD_TYPE} ..
-    - cmake --build . --target self_test
-  test_script:
-    - cd build-${BUILD_TYPE}
-    - ./self_test
-
-windows_task:
-  windows_container:
-    image: cirrusci/windowsservercore:cmake
-  env:
-    matrix:
-      - CXXSTD: 14
-      - CXXSTD: 17
-      - CXXSTD: 20
-  build_script:
-    - set PATH=%PATH%;C:\Program Files\CMake\bin
-    - mkdir build
-    - cd build
-    - cmake --version
-    - echo cmake -DCMAKE_CXX_STANDARD=%CXXSTD% -DCMAKE_CXX_FLAGS="/W3 /we /EHsc" -DCMAKE_BUILD_TYPE=Debug ..
-    - cmake -DCMAKE_CXX_STANDARD=%CXXSTD% -DCMAKE_CXX_FLAGS="/W3 /we /EHsc" -DCMAKE_BUILD_TYPE=Debug ..
-    - cmake --build . --target self_test
-    - cd ..
-  test_script:
-    - dir build
-    - build\Debug\self_test.exe
