@@ -1,3 +1,5 @@
+        * Use github-actions for CI
+
 v2 2020-07-13
 
         * Fixed strong::underlying_type<T> for CRTP defined strong type T
